--- a/main/res/values/strings_not_translatable.xml
+++ b/main/res/values/strings_not_translatable.xml
@@ -201,7 +201,6 @@
     <string translatable="false" name="notification_channel_id">c:geo notification channel</string>
 
     <!-- link data to WhereYouGo - must be according to WhereYouGo configuration in their AndroidManifest.xml -->
-    <string translatable="false" name="whereyougo_package">menion.android.whereyougo</string>
     <string translatable="false" name="whereyougo_action_Mapsforge">"menion.android.whereyougo.maps.mapsforge.MapsforgeActivity"</string>
 
     <!-- WhereYouGo helper - must be the same values as in WhereYouGo -->
@@ -209,8 +208,17 @@
     <string translatable="false" name="cgeo_queryMapFile_actionParam">forceAndFeedback</string>
 
     <!-- play store ids -->
-    <string translatable="false" name="chirpwolf_package">de.wolffire.chirpwolf</string>
-    <string translatable="false" name="brouter_package">btools.routingapp</string>
+    <string translatable="false" name="package_whereyougo">menion.android.whereyougo</string>
+    <string translatable="false" name="package_chirpwolf">de.wolffire.chirpwolf</string>
+    <string translatable="false" name="package_brouter">btools.routingapp</string>
+    <string translatable="false" name="package_cgeo_contacts">cgeo.contacts</string>
+    <string translatable="false" name="package_pquery">org.pquery</string>
+    <string translatable="false" name="package_google_translate">com.google.android.apps.translate</string>
+    <string translatable="false" name="package_gpsstatus">com.eclipsim.gpsstatus2</string>
+    <string translatable="false" name="package_bluetoothgps">googoo.android.btgps</string>
+    <string translatable="false" name="package_gpslocker">com.silentlexx.gpslock</string>
+    <string translatable="false" name="package_barcode_scanner">com.google.zxing.client.android</string>
+    <string translatable="false" name="package_locus">menion.android.locus</string>
 
     <!-- map server urls -->
     <string translatable="false" name="mapserver_osm_v5">https://ftp-stud.hs-esslingen.de/pub/Mirrors/download.mapsforge.org/maps/v5/</string>
