--- a/main/res/values/changelog_master.xml
+++ b/main/res/values/changelog_master.xml
@@ -6,7 +6,7 @@
 
 <h4>Map:</h4>
 <ul>
-<li>...</li>
+<li>New: Color of location accuracy circle is configurable now</li>
 </ul>
 
 <h4>Cache details:</h4>
