wizard update - geocaching platforms: put buttons for "gc.com" and "opencaching & more" on the same page - integrated "advanced configuration" page into regular workflow; removed "services" button - show configuration status on last page - prev/next buttons: enlarged padding, added bottom margin

--- a/main/res/values/styles.xml
+++ b/main/res/values/styles.xml
@@ -463,13 +463,15 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_centerHorizontal">true</item>
-        <item name="android:layout_marginTop">6dp</item>
+        <item name="android:layout_marginTop">12dp</item>
     </style>
 
     <style name="InstallationWizardButtonFooter" parent="InstallationWizardMarginsLR">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_alignParentBottom">true</item>
+        <item name="android:padding">12dp</item>
+        <item name="android:layout_marginBottom">12dp</item>
     </style>
 
     <style name="InstallationWizardTextViewBase" parent="InstallationWizardMarginsLR">
