--- a/main/res/layout/install_wizard.xml
+++ b/main/res/layout/install_wizard.xml
@@ -27,12 +27,53 @@
         style="@style/InstallationWizardTextViewBase"
         android:textSize="22sp" />
 
-    <Button
-        android:id="@+id/wizard_button"
+    <TextView
+        android:id="@+id/wizard_button1_info"
         android:layout_below="@id/wizard_text"
+        style="@style/InstallationWizardTextViewAdvanced"
+        android:visibility="gone" />
+    <Button
+        android:id="@+id/wizard_button1"
+        android:layout_below="@id/wizard_button1_info"
         style="@style/InstallationWizardButtonFull"
         android:visibility="gone" />
 
-    <include layout="@layout/install_wizard_footer" />
+    <TextView
+        android:id="@+id/wizard_button2_info"
+        android:layout_below="@id/wizard_button1"
+        style="@style/InstallationWizardTextViewAdvanced"
+        android:visibility="gone" />
+    <Button
+        android:id="@+id/wizard_button2"
+        android:layout_below="@id/wizard_button2_info"
+        style="@style/InstallationWizardButtonFull"
+        android:visibility="gone" />
+
+    <TextView
+        android:id="@+id/wizard_button3_info"
+        android:layout_below="@id/wizard_button2"
+        style="@style/InstallationWizardTextViewAdvanced"
+        android:visibility="gone" />
+    <Button
+        android:id="@+id/wizard_button3"
+        android:layout_below="@id/wizard_button3_info"
+        style="@style/InstallationWizardButtonFull"
+        android:visibility="gone" />
+
+    <Button
+        android:id="@+id/wizard_prev"
+        android:layout_alignParentBottom="true"
+        style="@style/InstallationWizardButtonFooter"
+        android:text="@string/previous" />
+    <Button
+        android:id="@+id/wizard_skip"
+        android:layout_centerHorizontal="true"
+        style="@style/InstallationWizardButtonFooter"
+        android:text="@string/skip" />
+    <Button
+        android:id="@+id/wizard_next"
+        android:layout_alignParentRight="true"
+        style="@style/InstallationWizardButtonFooter"
+        android:text="@string/next" />
 
 </RelativeLayout>
