--- a/main/res/menu/main_activity_options.xml
+++ b/main/res/menu/main_activity_options.xml
@@ -24,6 +24,12 @@
         app:showAsAction="ifRoom">
     </item>
     <item
+        android:id="@+id/menu_wizard"
+        android:icon="@drawable/ic_menu_preferences"
+        android:title="@string/wizard"
+        app:showAsAction="ifRoom">
+    </item>
+    <item
         android:id="@+id/menu_settings"
         android:icon="@drawable/ic_menu_preferences"
         android:title="@string/menu_settings"
