--- a/main/res/layout/mapdownloader_activity.xml
+++ b/main/res/layout/mapdownloader_activity.xml
@@ -6,6 +6,14 @@
     android:orientation="vertical"
     tools:context=".settings.MapDownloadSelectorActivity" >
 
+    <Button
+        android:id="@+id/check_for_updates"
+        style="@style/button_full"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:text="@string/downloadmap_checkforupdates_button"
+        android:visibility="gone" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/mapdownloader_list"
         android:layout_width="fill_parent"
