--- a/main/res/xml/preferences.xml
+++ b/main/res/xml/preferences.xml
@@ -572,7 +572,7 @@
                 android:title="@string/downloadmap_title"
                 app:urlButton="@string/downloadmap_choose" />
             <Preference
-                android:key="@string/pref_publicfolder_offlinemaps"
+                android:key="@string/pref_configurablefolder_offlinemaps"
                 android:title="@string/init_map_directory_description" />
             <cgeo.geocaching.settings.InfoPreference
                 android:text="@string/settings_info_themes"
@@ -1064,11 +1064,11 @@
         <PreferenceCategory android:title="@string/init_local_file_syytem"
             android:layout="@layout/preference_category" android:key="@string/pref_group_localfilesystem">
             <Preference
-                android:key="@string/pref_publicfolder_basedir"
+                android:key="@string/pref_configurablefolder_basedir"
                 android:title="@string/init_base_directory_description" />
             <Preference
-                android:key="@string/pref_publicfolder_testdir"
-                android:title="For unit tests only. This preference is only visible in Debug mode and can be ignored" />
+                android:key="@string/pref_configurablefolder_testdir"
+                android:title="Directory for Unit Tests. This setting is only needed for development and only visible in Debug mode" />
         </PreferenceCategory>
 
         <PreferenceCategory android:title="@string/init_location"
